fix: /favicon.ico request returns 204